--- a/index.html
+++ b/index.html
@@ -108,173 +108,161 @@
               with ease. Don't miss out! Click below to access the greatest
               Pokédex the world has ever seen!
             </p>
-            <a href="https://sahildash.adamenglish.net/pokedex/" target="_blank"><i
+            <a href="https://sahildash.uk.to/pokedex/" target="_blank"><i
                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
       </div>
-      <!-- TODO: Add 3 more works + desc.
-        <div class="work-list">
-          <div class="work">
-            <img src="images/work-4.png" />
-            <div class="layer">
-              <h3>Python Calculator</h3>
-              <p>
-                Introducing the ultimate Python calculator! With a sleek design
-                and a comprehensive set of functions, it's ideal for both simple
-                arithmetic and intricate equations. Featuring 25 diverse
-                functions, from quadratic equations to trigonometry, it's your
-                go-to tool for calculations of any complexity. Dive into its
-                capabilities by exploring the full code below.
-              </p>
-              <a
-                href="https://github.com/rip-super/python-thingies/blob/main/calculator.py"
-                target="_blank"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </div>
-          </div>
-          <div class="work">
-            <img src="images/work-5.png" />
-            <div class="layer">
-              <h3>Downloads Folder Sorter</h3>
-              <p>
-                Tired of the chaos in your downloads folder? Say hello to a
-                Python script that effortlessly sorts and organizes your files
-                by type, supporting up to 59 different formats! Bid farewell to
-                clutter and welcome a streamlined, efficient downloads folder.
-                Download the script now and experience the convenience of a
-                neatly organized file library!
-              </p>
-              <a
-                href="https://github.com/rip-super/python-thingies/blob/main/file_sorter_downloads.py"
-                target="_blank"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </div>
-          </div>
-          <div class="work">
-            <img src="images/work-6.png" />
-            <div class="layer">
-              <h3>Online Pokédex</h3>
-              <p>
-                Ever wondered what a shiny looks like or what moves your Pokémon
-                can learn? Look no further! Our all-inclusive Pokédex is your
-                go-to resource, providing comprehensive support for every
-                Pokémon imaginable. Say goodbye to uncertainty and hello to
-                excitement as you delve into the vibrant universe of Pokémon
-                with ease. Don't miss out! Click below to access the greatest
-                Pokédex the world has ever seen!
-              </p>
-              <a
-                href="https://sahildash.adamenglish.net/pokedex/"
-                target="_blank"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </div>
+      <div class="work-list">
+        <div class="work">
+          <img src="images/work-4.png" />
+          <div class="layer">
+            <h3>SpotiPy</h3>
+            <p>
+              Introducing the ultimate tool for music enthusiasts—our cutting-edge Spotipy script!
+              Imagine having the power to effortlessly download your favorite tracks from Spotify and save them as
+              high-quality MP3 files, all at your fingertips. Whether you're curating the perfect
+              playlist for a road trip or creating a personal collection of beloved tunes,
+              our script simplifies the process with ease. Just input your desired songs,
+              and watch as they are transformed into crisp, clear MP3s ready for offline enjoyment.
+              Say goodbye to streaming limits and hello to endless musical freedom with our
+              Spotipy script—your gateway to a world of music, anytime, anywhere!
+            </p>
+            <a href="https://github.com/rip-super/python-thingies/blob/main/spotipy.py" target="_blank"><i
+                class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
-        <a
-          href="https://github.com/rip-super?tab=repositories"
-          target="_blank"
-          class="btn"
-          >See More</a
-        >
-      </div>
-      -->
-    </div>
-    <!--------Contact Me----------->
-    <div id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="contact-left">
-            <h1 class="sub-title">Contact Me</h1>
-            <p id="email" onclick="copyToClipboard('sahildash7704@gmail.com')">
-              <i class="fa-solid fa-paper-plane"></i> sahildash7704@gmail.com
+        <div class="work">
+          <img src="images/work-5.png" />
+          <div class="layer">
+            <h3>Youtube Video Downloader</h3>
+            <p>
+              Elevate your video experience with our powerful script designed for YouTube enthusiasts!
+              Our cutting-edge tool lets you download YouTube videos and save them as high-quality MP4 files,
+              all in a flash. Whether you’re building a video library, archiving your favorite clips,
+              or preparing offline content for a presentation, our script handles it effortlessly.
+              Just enter the video URL, and watch as your chosen content is swiftly converted into MP4 format,
+              ready for seamless playback on any device. Embrace the freedom to watch your favorite YouTube videos
+              anytime,
+              anywhere—our script makes it all possible with ease and efficiency!
             </p>
-            <div id="copyMessage">
-              <i class="fa-solid fa-square-check"></i>⠀Copied to clipboard
-            </div>
-            <div class="social-icons">
-              <a href="https://github.com/rip-super" target="_blank">
-                <i class="fa-brands fa-github"></i>
-              </a>
-              <!-- extra icons:
+            <a href="https://github.com/rip-super/python-thingies/blob/main/yt-video-downloader.py" target="_blank"><i
+                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+        <div class="work">
+          <img src="images/work-6.png" />
+          <div class="layer">
+            <h3>PyIMG</h3>
+            <p>
+              Experience the next leap in image file formats with Pyimg—your new competitor to PNG!
+              Pyimg is designed to be up to twice as small as traditional PNG files,
+              offering exceptional image quality while significantly reducing file sizes.
+              Whether you're a graphic designer, photographer, or just someone who values efficiency,
+              Pyimg provides a sleek solution for managing and storing your visuals. With its cutting-edge
+              compression technology, you’ll enjoy faster load times and optimized storage without sacrificing clarity.
+              Step into the future of image formatting with Pyimg, where innovation meets superior performance!
+            </p>
+            <a href="https://github.com/rip-super/pyimg" target="_blank"><i
+                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+        </div>
+      </div>
+      <a href="https://github.com/rip-super?tab=repositories" target="_blank" class="btn">See More</a>
+    </div>
+  </div>
+  <!--------Contact Me----------->
+  <div id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="contact-left">
+          <h1 class="sub-title">Contact Me</h1>
+          <p id="email" onclick="copyToClipboard('sahildash7704@gmail.com')">
+            <i class="fa-solid fa-paper-plane"></i> sahildash7704@gmail.com
+          </p>
+          <div id="copyMessage">
+            <i class="fa-solid fa-square-check"></i>⠀Copied to clipboard
+          </div>
+          <div class="social-icons">
+            <a href="https://github.com/rip-super" target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <!-- extra icons:
               <a href=""><i class="fa-brands fa-square-x-twitter"></i></a>
               <a href=""><i class="fa-brands fa-square-instagram"></i></a>
               <a href=""><i class="fa-brands fa-linkedin"></i></a>
               -->
-            </div>
-          </div>
-          <div class="contact-right">
-            <form name="submit-to-google-sheet">
-              <input type="text" name="Name" placeholder="Your Name" required />
-              <input type="email" name="Email" placeholder="Your Email" required />
-              <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-              <button type="submit" class="btn btn2">Submit</button>
-            </form>
-            <span id="msg"></span>
           </div>
         </div>
-      </div>
-      <div class="copyright">
-        <p>Copyright © SD Incorporated</p>
+        <div class="contact-right">
+          <form name="submit-to-google-sheet">
+            <input type="text" name="Name" placeholder="Your Name" required />
+            <input type="email" name="Email" placeholder="Your Email" required />
+            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+            <button type="submit" class="btn btn2">Submit</button>
+          </form>
+          <span id="msg"></span>
+        </div>
       </div>
     </div>
+    <div class="copyright">
+      <p>Copyright © SD Incorporated</p>
+    </div>
+  </div>
 
-    <script>
-      var sidemenu = document.getElementById("sidemenu");
+  <script>
+    var sidemenu = document.getElementById("sidemenu");
 
-      function copyToClipboard(text) {
-        navigator.clipboard.writeText(text);
-        var copyMessage = document.getElementById("copyMessage");
-        copyMessage.style.display = "block";
-        copyMessage.classList.add("copy-animation");
-        setTimeout(function () {
-          copyMessage.style.display = "none";
-          copyMessage.classList.remove("copy-animation");
-        }, 1500);
-      }
+    function copyToClipboard(text) {
+      navigator.clipboard.writeText(text);
+      var copyMessage = document.getElementById("copyMessage");
+      copyMessage.style.display = "block";
+      copyMessage.classList.add("copy-animation");
+      setTimeout(function () {
+        copyMessage.style.display = "none";
+        copyMessage.classList.remove("copy-animation");
+      }, 1500);
+    }
 
-      function openmenu() {
-        sidemenu.style.right = "0";
-      }
+    function openmenu() {
+      sidemenu.style.right = "0";
+    }
 
-      function closemenu() {
-        sidemenu.style.right = "-200px";
-      }
-    </script>
-    <script>
-      const scriptURL =
-        "https://script.google.com/macros/s/AKfycbxbvcogmpEPqOJBWCHaZuN19B3TfYsfE2ZVFQodw3O-kOT4ay8NSdim8HMAdfP5f5Xf/exec";
-      const form = document.forms["submit-to-google-sheet"];
-      const msg = document.getElementById("msg");
+    function closemenu() {
+      sidemenu.style.right = "-200px";
+    }
+  </script>
+  <script>
+    const scriptURL =
+      "https://script.google.com/macros/s/AKfycbxbvcogmpEPqOJBWCHaZuN19B3TfYsfE2ZVFQodw3O-kOT4ay8NSdim8HMAdfP5f5Xf/exec";
+    const form = document.forms["submit-to-google-sheet"];
+    const msg = document.getElementById("msg");
 
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        fetch(scriptURL, { method: "POST", body: new FormData(form) })
-          .then((response) => {
-            console.log("Success!", response);
-            form.reset();
-            showMessage("Message sent successfully!");
-          })
-          .catch((error) => {
-            console.error("Error!", error.message);
-            showMessage("An error occurred. Please try again later.", true);
-          });
-      });
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
+      fetch(scriptURL, { method: "POST", body: new FormData(form) })
+        .then((response) => {
+          console.log("Success!", response);
+          form.reset();
+          showMessage("Message sent successfully!");
+        })
+        .catch((error) => {
+          console.error("Error!", error.message);
+          showMessage("An error occurred. Please try again later.", true);
+        });
+    });
 
-      function showMessage(message, isError = false) {
-        msg.textContent = message;
-        msg.style.color = isError ? "#ff0000" : "#61b752";
-        msg.style.display = "block";
-        msg.classList.add("fadeInOut");
-        setTimeout(() => {
-          msg.style.display = "none";
-          msg.classList.remove("fadeInOut");
-        }, 2500);
-      }
-    </script>
+    function showMessage(message, isError = false) {
+      msg.textContent = message;
+      msg.style.color = isError ? "#ff0000" : "#61b752";
+      msg.style.display = "block";
+      msg.classList.add("fadeInOut");
+      setTimeout(() => {
+        msg.style.display = "none";
+        msg.classList.remove("fadeInOut");
+      }, 2500);
+    }
+  </script>
 </body>
 
 </html>
